--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,17 +4,15 @@ on:
   push
 
 jobs:
-  jekyll:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.0' # Not needed with a .ruby-version file
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+        ruby-version: '3.0' 
+        bundler-cache: true
+    - name: Update RubyGems
+      run: |
+        gem update --system
     - run: bundle exec rake
-
-    # Standard usage
-    - uses:  helaili/jekyll-action@v2
-      with:
-        token: ${{ secrets.JEKYLL_PAT }}
