--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ version:          1.0
 gitbook_version:  3.2.3
 
 url:              'https://surfalytics.com'
-baseurl:          ''
+baseurl:          '/surfalytics-gitbook'
 rss:              RSS
 
 # bootstrap: use the remote theme for the site itself
