--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           bundle install --jobs 4 --retry 3
 
       - name: Build the site
-        run: bundle exec jekyll build
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
           
       - name: Deploy to Github Pages
         uses: peaceiris/actions-gh-pages@v3
