--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ toc:
   h_max: 3
 
 # customize the link favicon in header, will be {{site.baseurl}}/{{site.favicon_path}}
-favicon_path:     /assets/favicon2.png
+favicon_path:     ./assets/favicon2.png
 
 # markdown render engine.
 markdown:         kramdown
