--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -48,15 +48,25 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        run: |
+          bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+          echo "=== Directory structure of _site ==="
+          ls -la _site
+          echo "=== Size of _site directory ==="
+          du -sh _site
         env:
           JEKYLL_ENV: production
+      - name: Check for symlinks
+        run: |
+          echo "=== Checking for symlinks in _site ==="
+          find _site -type l -ls
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
           path: _site
+          if-no-files-found: error
 
   # Deployment job 
   deploy:
